[Liverpool] Don't use position fixed for shadow wrap
This doesn't work with the liverpool footer so we just use
position: static to keep it in the flow of the page.
https://github.com/mysociety/FixMyStreet-Commercial/issues/447

--- a/web/cobrands/liverpool/_liverpool.scss
+++ b/web/cobrands/liverpool/_liverpool.scss
@@ -114,6 +114,12 @@ body.liverpool {
             background-color: $primary;
         }
     }
+
+    .shadow-wrap {
+        position: static;
+        padding-top: 0;
+        margin-bottom: 1em;
+    }
 }
 
 // Over-specific container widths to allow bootstrap to work.
